# RenderCore

./: CMakeLists.txt  build.sh
examples/collision2dExample/: CMakeLists.txt  main.cpp
examples/inputExample/: CMakeLists.txt  main.cpp
examples/inputExample/shaders/: default_vert.spv  default_vert.vert  shader_vert.spv
examples/materialsExample/: CMakeLists.txt  main.cpp
examples/materialsExample/shaders/: default_frag.frag  default_frag.spv  default_vert.spv  default_vert.vert
examples/shapesExample/: CMakeLists.txt  main.cpp
examples/shapesExample/shaders/: default_frag.frag  default_frag.spv  default_vert.spv
examples/test/: CMakeLists.txt  main.cpp
examples/test/shaders/: default_frag.frag  default_vert.spv  default_vert.vert  shader_frag.frag  shader_vert.vert
include/: RenderCore.hpp
include/RenderCore/: RenderCore.hpp  rcAssets.hpp  rcAssets.inl  rcGeometry.hpp  rcInput.hpp  rcInternal.hpp  rcShapes.hpp  rcTime.hpp  rcTypes.hpp
include/RenderCore/2d/: shape2D.hpp  shapes.hpp  types.hpp
include/RenderCore/core/: rcMaterial.hpp  rcRenderItem.hpp  rcShader.hpp  rcTexture2D.hpp  rcWindow.hpp
include/RenderCore/math/: math.hpp  (+6 more)
include/engine/: camera.hpp  materialSystem.hpp  mesh.hpp  renderItem.hpp  resourceManager.hpp  resourceManager.inl  shader.hpp  texture.hpp  transform.hpp  vertex.hpp  window.hpp
include/vulkanBackend/: framebufferManager.hpp  types.hpp  utils.hpp  vulkanBuffer.hpp  vulkanContext.hpp  vulkanDevice.hpp  vulkanShader.hpp  vulkanSwapchain.hpp  vulkanTexture.hpp
src/: CMakeLists.txt  RenderCore.cpp
src/RenderCore/: RenderCore.cpp  rcGeometry.cpp  rcInput.cpp  rcIntrenal.cpp  rcShapes.cpp  rcTexture2D.cpp  rcTime.cpp  rcTypes.cpp
src/engine/: camera.cpp  materialSystem.cpp  mesh.cpp  resourceManager.cpp  shader.cpp  texture.cpp  transform.cpp  vertex.cpp  window.cpp
src/vulkanBackend/: framebufferManager.cpp  utils.cpp  vulkanBuffer.cpp  vulkanContext.cpp  vulkanDevice.cpp  vulkanShader.cpp  vulkanSwapchain.cpp  vulkanTexture.cpp
(+40 files in other folders)
